--- a/z/zo/zoo/zoomdownloader.com.html
+++ b/z/zo/zoo/zoomdownloader.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the zoomdownloader.com privacy policy that was archived on 2013-12-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131208041318id_/http%3A//zoomdownloader.com/Legal/Privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the zoomdownloader.com privacy policy that was archived on 2014-02-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140227082244id_/http%3A//www.zoomdownloader.com/Legal/Privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>
 	Privacy Policy - Zoom Downlodaer
@@ -455,7 +455,7 @@ Fort Myers, FL 33907</span></p>
     <a href="/Legal/Terms">Terms &amp; Conditions</a>
     <a href="/Home/Support#uninstall">Uninstall</a>
     <a href="/Home/Contact">Contact Us</a>
-    <div class="copyright">Copyright © 2013 Zoom Downloader.  All rights reserved.</div>
+    <div class="copyright">Copyright © 2014 Zoom Downloader.  All rights reserved.</div>
     </div>
 
 
