--- a/s/si/sit/sitevaluefox.com.html
+++ b/s/si/sit/sitevaluefox.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sitevaluefox.com privacy policy that was archived on 2013-04-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130423070238id_/http%3A//www.sitevaluefox.com/privacy_policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sitevaluefox.com privacy policy that was archived on 2014-02-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140227091730id_/http%3A//www.sitevaluefox.com/privacy_policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -89,12 +89,13 @@
             <br>
             If you have any questions about this Privacy Policy, the practices of this site, or your dealings with this site, please contact us at:<br>
             <a href="http://www.sitevaluestats.com/">SiteValueFox.com</a><br>
-            <a href="http://www.sitevaluestats.com/">http://www.sitevaluefox.com</a><br>
-            SiteValueFox.com, 79596 Rättvik, Sweden<br>
-            +46-(0)723-080932&nbsp;<br>
             info @ sitevaluefox.com<br>
+            <a href="http://www.sitevaluestats.com/">http://www.sitevaluefox.com</a><br>
+            ExciteMediaNetwork, LCC <br>
+            <a href="http://www.excitemedianetwork.com/">http://www.excitemedianetwork.com</a><br>
             <br>
-          This document was last updated on February 12, 2012</span><br></td>
+            <br>
+          This document was last updated on January 4, 2014</span><br></td>
         </tr>
       </tbody></table>
     </center>
