--- a/m/ms/msf/msfinancialsavvy.com.html
+++ b/m/ms/msf/msfinancialsavvy.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the msfinancialsavvy.com privacy policy that was archived on 2013-12-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131229074702id_/http%3A//www.msfinancialsavvy.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the msfinancialsavvy.com privacy policy that was archived on 2014-02-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140227093817id_/http%3A//msfinancialsavvy.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Privacy statement, Small Business, Learn Investing, mutual funds, personal financial planning, women and money, investment books, loan calculator, retirement.</title>
