--- a/5/5d/5df/5dfly.com.html
+++ b/5/5d/5df/5dfly.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the 5dfly.com privacy policy that was archived on 2013-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131212094342id_/http%3A//www.5dfly.com/privacy-policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 5dfly.com privacy policy that was archived on 2014-02-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140227132126id_/http%3A//www.5dfly.com//privacy-policy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en-US"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
