--- a/t/th/tha/thai2english.com.html
+++ b/t/th/tha/thai2english.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the thai2english.com privacy policy that was archived on 2013-08-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130820062612id_/http%3A//www.thai2english.com/about/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thai2english.com privacy policy that was archived on 2014-02-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140228095225id_/http%3A//www.thai2english.com/about/privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -193,6 +193,7 @@ $(function() {
 
              <a href="/about/terms.aspx">Terms Of Use</a> |&nbsp;<a href="/about/privacy.aspx">Privacy Policy</a> <br>
              Copyright © 2004-2012 thai2english.com. All rights reserved.<br>
+   <a href="http://latintravelguide.com/colombia">Colombia Travel Guide</a>
             </div>
     </div>
 <br>
