--- a/i/ip/ip-/ip-tracker.org.html
+++ b/i/ip/ip-/ip-tracker.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ip-tracker.org privacy policy that was archived on 2013-09-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130927070611id_/http%3A//www.ip-tracker.org/privacy-policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ip-tracker.org privacy policy that was archived on 2014-02-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140228105135id_/http%3A//www.ip-tracker.org/privacy-policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html><head>
 <title>Privacy Policy | IP-Tracker.org</title>
@@ -9,7 +9,7 @@
 <base href="http://www.ip-tracker.org">
 <link rel="shortcut icon" href="favicon.ico">
 <link href="style.css" rel="stylesheet" type="text/css">
-<script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">
+<script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript">
         function noSpace() {
             var txtbox = document.getElementById('txtOne');
             txtbox.value = txtbox.value.replace(/\s/g, "");
@@ -23,17 +23,14 @@ txtbox.value = txtbox.value.replace("/", "");
 if (window != top) top.location.href = location.href;
 // -->
 </script>
-<script type="text/javascript">
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-33688304-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+  ga('create', 'UA-33688304-1', 'ip-tracker.org');
+  ga('send', 'pageview');
 
 </script>
 <script src="lks.js" type="text/javascript"></script>
@@ -194,7 +191,7 @@ So please review this page frequently for any changes in our Privacy Policy.
 </div>
 
 <div id="footercontact">
-Copyright © 2012 IP Tracker. All rights reserved. 
+Copyright © 2012 - 2014 IP Tracker. All rights reserved. 
 </div>
 
 </div>
