--- a/m/ma/mar/marshallheadphones.com.html
+++ b/m/ma/mar/marshallheadphones.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the marshallheadphones.com privacy policy that was archived on 2013-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131231025213id_/http%3A//www.marshallheadphones.com/support/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the marshallheadphones.com privacy policy that was archived on 2014-02-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140228111542id_/http%3A//www.marshallheadphones.com/support/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -20,7 +20,7 @@
 	<![endif]-->
 	
 	<!-- Libraries & plugins -->
-	<script src="https://dnn506yrbagrg.cloudfront.net/pages/scripts/0014/3671.js?439592" async="" type="text/javascript"></script><script async="" src="//stats.g.doubleclick.net/dc.js"></script><script id="twitter-wjs" src="http://platform.twitter.com/widgets.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-X5S5"></script><script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+	<script src="https://dnn506yrbagrg.cloudfront.net/pages/scripts/0014/3671.js?438996" async="" type="text/javascript"></script><script async="" src="//stats.g.doubleclick.net/dc.js"></script><script id="twitter-wjs" src="http://platform.twitter.com/widgets.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-X5S5"></script><script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="js/libs/jquery-1.8.2.min.js"><\/script>')</script><script src="js/libs/jquery-1.8.2.min.js"></script>
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="/client/zound/themes/marshall2/js/jquery.easing.1.3.js"></script>
@@ -46,7 +46,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-X5S5');</script>
 <!-- End Google Tag Manager -->	<div class="top-stripe">
-		Right now! Free shipping on all products	</div>
+		Free Shipping on all products	</div>
 	<div id="main" class="wrapper">
 					<div id="shopping-cart">
 							<div class="cart-empty">
@@ -228,7 +228,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 									</li>
 																	<li>
 										<a href="/speakers/stanmore/stanmore-uk-cream"><img src="http://wew.marshallheadphones.com/http://cdn.marshallheadphones.com/client/zound/dynamic/images/3086_41d3153b45-amsbig.jpg" width="85" height="85"></a>
-										<p><a href="/speakers/stanmore/stanmore-uk-cream">Stanmore Cream</a></p>
+										<p><a href="/speakers/stanmore/stanmore-uk-cream">Stanmore Cream UK</a></p>
 									</li>
 															</ul>
 						</li>
@@ -236,7 +236,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			</li>
 					<li class="level0-item"><a href="/accessories">Accessories</a>
 				<ul class="level1">
-																<li class="first level1-item"><a href="/accessories/monitor">Monitor</a>
+																<li class="first level1-item"><a href="/accessories/monitor">Headphones</a>
 							<ul class="level2">
 																									<li class="first">
 										<a href="/accessories/monitor/monitor-ftf-filter"><img src="http://wew.marshallheadphones.com/http://cdn.marshallheadphones.com/client/zound/dynamic/images/3029_90a45ad284-amsbig.jpg" width="85" height="85"></a>
@@ -244,7 +244,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 									</li>
 																	<li>
 										<a href="/accessories/monitor/monitor-audio-cable"><img src="http://wew.marshallheadphones.com/http://cdn.marshallheadphones.com/client/zound/dynamic/images/3028_56d8c35429-amsbig.jpg" width="85" height="85"></a>
-										<p><a href="/accessories/monitor/monitor-audio-cable">Audio Cable</a></p>
+										<p><a href="/accessories/monitor/monitor-audio-cable">Monitor Audio Cable</a></p>
 									</li>
 																	<li>
 										<a href="/accessories/monitor/monitor-ear-cushion-right"><img src="http://wew.marshallheadphones.com/http://cdn.marshallheadphones.com/client/zound/dynamic/images/3026_232a4109fe-amsbig.jpg" width="85" height="85"></a>
@@ -267,9 +267,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<ul class="level1">
 											<li class="level1-item first">
 							<a href="/stanmore">Stanmore</a>
-						</li>
-											<li class="level1-item">
-							<a href="/not-so-black-friday-sale">Not So Black Friday Sale</a>
 						</li>
 											<li class="level1-item">
 							<a href="/hanwell-heritage-colours">Hanwell Heritage Colours</a>
@@ -372,7 +369,7 @@ We use cookies to help personalize your use of our websites. This website in par
 							<p><strong>D.	Security Policy </strong><br>
 Zound Industries is committed to keeping your personal information secure against unauthorized access or use, alteration, unlawful or accidental destruction and accidental loss. Only authorized employees, agents and contractors (who have agreed to keep information secure and confidential) have access to this information. All emails and newsletters from this site allow you to opt out of further mailings. However, you should be aware that there is always some risk involved in transmitting information over the internet.</p>
 <p>Privacy Contact Information</p>
-<p>If you have any questions, concerns or comments about our privacy policy you may contact us at this address: info@marshallheadphones.com.</p>
+<p>If you have any questions, concerns or comments about our privacy policy you may contact us at this address: <a href="mailto:info@marshallheadphones.com">info@marshallheadphones.com</a></p>
 						</div>
 					</div>
 													<div class="clear"></div>
@@ -403,8 +400,10 @@ Zound Industries is committed to keeping your personal information secure agains
 					</div>
 					<div class="column">
 												<table class="shipping-costs">
+
+
 <tbody><tr>
-		<th class="heading" colspan="3" style="color: red;">NOW FREE WORLDWIDE SHIPPING </th>
+		<th class="heading" colspan="3" style="color: red;">RIGHT NOW! FREE SHIPPING</th>
 		<th></th>
 		<th></th>
 	</tr>	
