--- a/p/pr/pro/probitsoftware.com.html
+++ b/p/pr/pro/probitsoftware.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the probitsoftware.com privacy policy that was archived on 2013-12-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131206013541id_/http%3A//www.probitsoftware.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the probitsoftware.com privacy policy that was archived on 2014-02-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140228135725id_/http%3A//www.probitsoftware.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js"><!--<![endif]--><head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -52,7 +52,7 @@
                 <div class="logo"><a href="/"><img src="images/logo.png" alt=""></a></div>
 
                 <!-- nav -->
-                <nav id="nav" class="slides"><div id="menu-icon">Menu</div>
+                <nav id="nav" class="slides">
                     <ul id="menu">
                     <li><a href="/">Home</a></li>      
                     <li><a href="about.php">Company </a></li>      
