--- a/i/it/itg/itgovernance.co.uk.html
+++ b/i/it/itg/itgovernance.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the itgovernance.co.uk privacy policy that was archived on 2013-08-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130812172247id_/http%3A//www.itgovernance.co.uk/privacy_policy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the itgovernance.co.uk privacy policy that was archived on 2014-03-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140301075431id_/http%3A//www.itgovernance.co.uk/privacy_policy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml"><head id="head"><title>
 	Privacy Policy
@@ -41,44 +41,12 @@
     <form method="post" action="/privacy_policy.aspx" id="form">
 <div class="aspNetHidden">
 <input type="hidden" name="manScript_HiddenField" id="manScript_HiddenField" value="">
-<input type="hidden" name="__EVENTTARGET" id="__EVENTTARGET" value="">
-<input type="hidden" name="__EVENTARGUMENT" id="__EVENTARGUMENT" value="">
-<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUKMTYwODg0MzQ2NmRkLSykNqApb6BwdyAVndjsbUWHuQzkrRVjMWW3nK4XJp0=">
+<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUKMTYwODg0MzQ2NmRkWddCF4ds4a0LFtHW9BOy8ABXHk/cgV6uJHI/fYNmFbg=">
 </div>
-
-<script type="text/javascript">
-//<![CDATA[
-var theForm = document.forms['form'];
-if (!theForm) {
-    theForm = document.form;
-}
-function __doPostBack(eventTarget, eventArgument) {
-    if (!theForm.onsubmit || (theForm.onsubmit() != false)) {
-        theForm.__EVENTTARGET.value = eventTarget;
-        theForm.__EVENTARGUMENT.value = eventArgument;
-        theForm.submit();
-    }
-}
-//]]>
-</script>
-
-
-<script src="/WebResource.axd?d=Wd_qTzQu2R-lJirJUSXJDFFmfw3Q45X8XQ6gEVGvCavuCvDl9P3Z2Jgo-Mp7QPlDGODoJZd5yyxSiG6BQ5MPdnq2pm2K7OlSeLi9u8hiyf81&amp;t=634944285248592052" type="text/javascript"></script>
 
 <input type="hidden" name="lng" id="lng" value="en-GB">
-<script src="/ScriptResource.axd?d=zU3NV-CArALNBEAUt2Hqpqd1Tc6oixhVkXMSKGWw8r23Ypy6o7ValCY-Jrbz0xf0fSAFD19q2WDhJvjY9l38lX972pH1WrSoCsS1Pv-enhS5wFAdlYNOuqP-8TK2VkcA0&amp;t=53a20297" type="text/javascript"></script>
-<script src="/ScriptResource.axd?d=JU_lRpUU14IoCLvSIqkaGvaIaVP0f6CGmWg1n-ndoZpENUKVoDXcIfw4TkRgAFT5KYxiJvR0LEvPukGM3BX5DN7lOcJGFlAjNPXFBD44R-k3FgUdMnIZEFH77NMa5uQ_LcKDIeaWJktZukVjupvaDw2&amp;t=53a20297" type="text/javascript"></script>
-<div class="aspNetHidden">
-
-	<input type="hidden" name="__SCROLLPOSITIONX" id="__SCROLLPOSITIONX" value="0">
-	<input type="hidden" name="__SCROLLPOSITIONY" id="__SCROLLPOSITIONY" value="0">
-</div>
-    <script type="text/javascript">
-//<![CDATA[
-Sys.WebForms.PageRequestManager._initialize('manScript', 'form', [], [], [], 90, '');
-//]]>
-</script>
-<div id="CMSHeaderDiv">
+<script src="/ScriptResource.axd?d=NmNRnR4srWjq9mblQ_dO5ypQa1CJMSWmFljmBOKT8-2lTZGxdeBU3PHxgAvEvS5yFYtMt4NnbBG-btx10yLTVgdKvK9lgiY7RhrsNJ9FDWvZtc7kvsmtpZPC_ziELlwP0&amp;t=53a20297" type="text/javascript"></script>
+    <div id="CMSHeaderDiv">
 	<!-- -->
 </div>
      
@@ -172,11 +140,12 @@ Sys.WebForms.PageRequestManager._initialize('manScript', 'form', [], [], [], 90,
 		<li><a href="/cismp.aspx">CISMP</a></li>
 		<li style=""><a href="/cissp.aspx" style="">CISSP</a></li>
 		<li style=""><a href="/clas-consultancy.aspx" style="">CLAS</a></li>
-		<li style=""><a href="/cloud-computing.aspx" style="">Cloud Computing</a></li>
+		<li style=""><a href="/cloud-governance.aspx" style="">Cloud Governance</a></li>
 		<li style=""><a href="/cobit.aspx" style="">COBIT</a></li>
 		<li style=""><a href="/codes-of-connection.aspx" style="">Codes of Connection</a></li>
 		<li style=""><a href="/compliance.aspx" style="">Compliance</a></li>
 		<li style=""><a href="/crisc-certification.aspx" style="">CRISC</a></li>
+		<li style=""><a href="/cyber-resilience.aspx" style="">Cyber Resilience</a></li>
 		<li style=""><a href="/what-is-cybersecurity.aspx" style="">Cyber Security</a></li>
 		<li style=""><a href="/data-governance.aspx" style="">Data Governance</a></li>
 		<li style=""><a href="/data-protection.aspx" style="">Data Protection</a></li>
@@ -185,6 +154,7 @@ Sys.WebForms.PageRequestManager._initialize('manScript', 'form', [], [], [], 90,
 		<li style=""><a href="/infosec.aspx" style="">Information Security</a></li>
 		<li style=""><a href="/iso20000.aspx" style="">ISO 20000</a></li>
 		<li style=""><a href="/iso22301-business-continuity-standard.aspx" style="">ISO 22301</a></li>
+		<li style=""><a href="/iso27001-2013.aspx" style="">ISO 27001 2013</a></li>
 		<li style=""><a href="/iso27001.aspx" style="">ISO 27001</a></li>
 		<li style=""><a href="/iso31000.aspx" style="">ISO 31000</a></li>
 		<li style=""><a href="/iso38500.aspx" style="">ISO 38500</a></li>
@@ -192,7 +162,7 @@ Sys.WebForms.PageRequestManager._initialize('manScript', 'form', [], [], [], 90,
 		<li style=""><a href="/it_audit.aspx" style="">IT Audit</a></li>
 		<li style=""><a href="/it_governance.aspx" style="">IT Governance</a></li>
 		<li style=""><a href="/frameworks.aspx" style="">IT Management Frameworks</a></li>
-		<li style=""><a href="/itil.aspx" style="">ITIL</a></li>
+		<li style=""><a href="/itil.aspx" style="">ITIL®</a></li>
 		<li style=""><a href="/itsm.aspx" style="">IT Service Management</a></li>
 		<li style=""><a href="/km.aspx" style="">Knowledge Management</a></li>
 		<li style=""><a href="/m_o_r.aspx" style="">M_o_R</a></li>
@@ -212,6 +182,7 @@ Sys.WebForms.PageRequestManager._initialize('manScript', 'form', [], [], [], 90,
 		<li style=""><a href="/social-media-governance.aspx" style="">Social Media Governance</a></li>
 		<li style=""><a href="/soft-skills.aspx" style="">Soft Skills</a></li>
 		<li style=""><a href="/standards.aspx" style="">Management System Standards</a></li>
+		<li style=""><a href="/supplier-audit.aspx" style="">Supply Chain and ISO28000</a></li>
 		<li style=""><a href="/technical-services.aspx" style="">Technical Services</a></li>
 		<li style=""><a href="/tickitplus.aspx" style="">TickITplus</a></li>
 	</ul>
@@ -312,7 +283,7 @@ Sys.WebForms.PageRequestManager._initialize('manScript', 'form', [], [], [], 90,
 <li><a href="/it_governance.aspx">IT Governance</a></li>
 <li><a href="/frameworks.aspx">IT Management Frameworks</a></li>
 <li><a href="/itsm.aspx">IT Service Management</a></li>
-<li><a href="/itil.aspx">ITIL</a></li>
+<li><a href="/itil.aspx">ITIL®</a></li>
 <li><a href="/km.aspx">Knowledge Management</a></li>
 <li><a href="/M_o_R.aspx">M_o_R</a></li>
 <li><a href="/standards.aspx">Management System Standards</a></li>
@@ -421,7 +392,7 @@ Sys.WebForms.PageRequestManager._initialize('manScript', 'form', [], [], [], 90,
                             </div>
                             <div class="col">
                                 <ul>
-<li><a href="/shop/c-150-itil.aspx">ITIL</a></li>
+<li><a href="/shop/c-150-itil.aspx">ITIL®</a></li>
 <li><a href="/shop/c-244-knowledge-management.aspx">Knowledge Management</a></li>
 <li><a href="/shop/c-246-m_o_r.aspx">M_o_R</a></li>
 <li><a href="/shop/c-179-management-system-standards.aspx">Management System Standards</a></li>
@@ -532,7 +503,7 @@ Sys.WebForms.PageRequestManager._initialize('manScript', 'form', [], [], [], 90,
 <li><a href="/shop/c-264-training-courses.aspx">ISO 27001</a></li>
 <li><a href="/shop/c-315-training-courses.aspx">ISO 27005</a></li>
 <li><a href="/shop/c-256-training-courses.aspx">IT Governance</a></li>
-<li><a href="/shop/c-152-training-courses.aspx">ITIL</a></li>
+<li><a href="/shop/c-152-training-courses.aspx">ITIL®</a></li>
 <li><a href="/shop/c-296-training-courses.aspx">M_o_R</a></li>
 <li><a href="/shop/c-301-training-courses.aspx">MSP</a></li>
 <li><a href="/shop/c-310-training-courses.aspx">PCI DSS</a></li>
@@ -743,7 +714,7 @@ Sys.WebForms.PageRequestManager._initialize('manScript', 'form', [], [], [], 90,
                             </div>
                     <div class="col end">
                              <ul>
-<li><a href="/itsm-itil-iso20000-consultancy.aspx">ITIL</a></li>
+<li><a href="/itsm-itil-iso20000-consultancy.aspx">ITIL®</a></li>
 <li><a href="/iso-9001-quality-management-consultancy.aspx">Management System Standards</a></li>
 <li><a href="/n3-cfh-fasttrack-consultancy-service.aspx">N3</a></li>
 <li><a href="/pci-consultancy.aspx">PCI DSS</a></li>
@@ -807,7 +778,7 @@ Sys.WebForms.PageRequestManager._initialize('manScript', 'form', [], [], [], 90,
                             </div>
                             <div class="col">
                                 <ul>
-                                <li><a href="/cybersecurity.aspx">Cyber Security</a></li>
+                                <li><a href="/technical-services/cyber-security-testing.aspx">Cyber Security</a></li>
                                 <li><a href="/penetration-testing.aspx">Penetration Testing</a></li>
                                 </ul>
                             </div>
@@ -827,9 +798,11 @@ Sys.WebForms.PageRequestManager._initialize('manScript', 'form', [], [], [], 90,
             <div id="languages" style="display: none;">
                 <p>Select your regional store:</p>
                 <ul>
-                    <li class="usa"><a href="http://www.itgovernanceusa.com/">USA</a></li>
-                    <li class="eu"><a href="http://www.itgovernance.eu/">EU</a></li>
-                    <li class="asiaPac"><a href="http://www.itgovernance.asia/">Asia Pacific</a></li>
+                    <li><a href="http://www.itgovernanceusa.com/">USA</a></li>
+                    <li><a href="http://www.itgovernance.eu/">EU</a></li>
+                    <li><a href="http://www.itgovernance.asia/">Asia Pacific</a></li>
+                    <li><a href="http://www.itgovernance.in/">India &amp; South Asia</a></li>
+                    <li><a href="http://www.itgovernancesa.co.za/">South Africa</a></li>
                 </ul>
             </div>
         </div>
@@ -850,6 +823,7 @@ Sys.WebForms.PageRequestManager._initialize('manScript', 'form', [], [], [], 90,
                         <li><a href="/green-papers.aspx">Green Papers</a></li>
                         <li><a href="/free_trial.aspx">Product Demos</a></li>
                         <li><a href="/web_links.aspx">Links</a></li>
+                        <li><a href="/glossary.aspx">Glossary</a></li>
                     </ul>
                 </div>
                 <div class="col">
@@ -857,6 +831,7 @@ Sys.WebForms.PageRequestManager._initialize('manScript', 'form', [], [], [], 90,
                     <ul>
                         <li><a href="/about.aspx">About us</a></li>
                         <li><a href="/media.aspx">Press Office</a></li>
+                        <li><a href="/partners.aspx">Partners</a></li>
                         <li><a href="/media/events.aspx">Events and Exhibitions</a></li>
                         <li><a href="/join_us.aspx">Join Us</a></li>
                         <li><a href="/customer-comments.aspx">Testimonials</a></li>
@@ -917,13 +892,7 @@ Sys.WebForms.PageRequestManager._initialize('manScript', 'form', [], [], [], 90,
 
 <script type="text/javascript">
 //<![CDATA[
-(function() {var fn = function() {$get("manScript_HiddenField").value = '';Sys.Application.remove_init(fn);};Sys.Application.add_init(fn);})();
-theForm.oldSubmit = theForm.submit;
-theForm.submit = WebForm_SaveScrollPositionSubmit;
-
-theForm.oldOnSubmit = theForm.onsubmit;
-theForm.onsubmit = WebForm_SaveScrollPositionOnSubmit;
-//]]>
+(function() {var fn = function() {$get("manScript_HiddenField").value = '';Sys.Application.remove_init(fn);};Sys.Application.add_init(fn);})();//]]>
 </script>
 </form>
 
