--- a/i/i9/i9a/i9advantage.com.html
+++ b/i/i9/i9a/i9advantage.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the i9advantage.com privacy policy that was archived on 2013-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131230135006id_/http%3A//www.i9advantage.com/extras/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the i9advantage.com privacy policy that was archived on 2014-03-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140301095718id_/http%3A//www.i9advantage.com/extras/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/i9_stage.dwt" codeOutsideHTMLIsLocked="false" --><head>
 	<!-- InstanceBeginEditable name="Page Title" --><title>i9 Advantage - Privacy Policy</title>
@@ -106,7 +106,7 @@
 			<!-- InstanceEndEditable --></div>
 		<div id="con_right"><!-- InstanceBeginEditable name="Right" -->
 			<br><div style="padding: 0 10px 10px 10px; border: 1px solid #EBEBEB;">
-		    <script language="javascript">displayRotatedContent("request")</script><h1><img src="https://web.archive.org/web/20110128205846/http://www.i9advantage.com/images/icons/lightbulb.gif" width="16" height="16"> Did you know...</h1>i9 Advantage will help eliminate your exposure to a government audit and penalties resulting from non-compliance.
+		    <script language="javascript">displayRotatedContent("request")</script><h1><img src="https://web.archive.org/web/20110128205846/http://www.i9advantage.com/images/icons/lightbulb.gif" width="16" height="16"> Did you know...</h1>Immigration and Customs Enforcement (I.C.E.) is the largest investigative arm of the Department of Homeland Security.
 			</div>
 			<!-- InstanceEndEditable -->
 			<div align="center"><a href="http://www.uscis.gov/e-verify" target="_blank"><img src="/images/E-Verify_Logo.jpg" border="0"></a><br>
