--- a/d/dr/drf/drfuhrman.com.html
+++ b/d/dr/drf/drfuhrman.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the drfuhrman.com privacy policy that was archived on 2013-10-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131030112903id_/http%3A//www.drfuhrman.com/company/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the drfuhrman.com privacy policy that was archived on 2014-03-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140301132936id_/http%3A//www.drfuhrman.com/company/privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 	
@@ -489,7 +489,7 @@ table.TableWidth_1000 { width:1000px; }
         <tbody><tr>
           <td class="bottomLink">
             <span style="color: #333333">
-              <b>Copyright © 2004—2013 DrFuhrman.com, Inc. All rights reserved.</b>
+              <b>Copyright © 2004—2014 DrFuhrman.com, Inc. All rights reserved.</b>
               All material provided on the DrFuhrman.com website is provided for informational or educational purposes only. Consult a physician regarding the applicability of any opinions or recommendations with respect to your symptoms or medical condition.
             </span>
           </td>
@@ -505,6 +505,7 @@ table.TableWidth_1000 { width:1000px; }
   <!-- end .containerNewDF --></div>
 
 <script type="text/javascript">
+if (!window._dfo_suppress_ga) {
 
   var _gaq = _gaq || [];
 
@@ -522,6 +523,7 @@ table.TableWidth_1000 { width:1000px; }
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 
+}
 </script>
 
 <script src="/js/fixshoplinks.js"></script>
@@ -539,6 +541,6 @@ table.TableWidth_1000 { width:1000px; }
 /* ]]> */
 </script>
 
-<script type="text/javascript"> if (!NREUMQ.f) {NREUMQ.f=function() {NREUMQ.push(["load",new Date().getTime()]);var e=document.createElement("script"); e.type="text/javascript"; e.src=(("http:"===document.location.protocol)?"http:":"https:") + "//" + "js-agent.newrelic.com/nr-100.js"; document.body.appendChild(e);if(NREUMQ.a)NREUMQ.a();};NREUMQ.a=window.onload;window.onload=NREUMQ.f;};NREUMQ.push(["nrfj","beacon-6.newrelic.com","a015dff2c7","1166192","ZFIGMkRSWxYEUxBaDF0YJTVmHFYKCEAFXRocRxYPQFJWHEtRF0Mb",0,46,new Date().getTime(),"6E44F8DBFF28448D","","","",""]);</script>
+<script type="text/javascript"> if (!NREUMQ.f) {NREUMQ.f=function() {NREUMQ.push(["load",new Date().getTime()]);var e=document.createElement("script"); e.type="text/javascript"; e.src=(("http:"===document.location.protocol)?"http:":"https:") + "//" + "js-agent.newrelic.com/nr-100.js"; document.body.appendChild(e);if(NREUMQ.a)NREUMQ.a();};NREUMQ.a=window.onload;window.onload=NREUMQ.f;};NREUMQ.push(["nrfj","beacon-6.newrelic.com","a015dff2c7","1166192","ZFIGMkRSWxYEUxBaDF0YJTVmHFYKCEAFXRocRxYPQFJWHEtRF0Mb",0,15,new Date().getTime(),"A331EF6FFAF5C170","","","",""]);</script>
 
 <script type="text/javascript" src="https://js-agent.newrelic.com/nr-100.js"></script></body></html>
